[package]
name = "egui-sf2g"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2024"
description = "egui integration for rust-sfml"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-sfml"
repository = "https://github.com/crumblingstatue/egui-sfml"

[dependencies]
arboard = "3.5.0"
egui = "0.31"
glu-sys = "0.1.4"

[dependencies.sf2g]
git = "https://github.com/crumblingstatue/sf2g.git"
default-features = false
features = ["graphics"]

[dev-dependencies]
egui_demo_lib = "0.31"
