[package]
name = "egui-sf2g"
version = "0.4.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2024"
description = "egui integration for sf2g"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-sf2g"
repository = "https://github.com/crumblingstatue/egui-sf2g"

[dependencies]
arboard = "3.5.0"
egui = "0.31"
glu-sys = "0.1.4"
sf2g = "0.4.0"

[dev-dependencies]
egui_demo_lib = "0.31"
